# FMMPotential

./: AUTHORS  CMakeLists.txt  FMMPotentialConfig.cmake.in  LICENSE  README.md
exafmm-3d/: AUTHORS  README.md  build_tree.h  exafmm.h  kernel.h
include/FMMPotential/: FMMPotential.h
src/: FMMPotential.cpp  FMMPotential_impl.h  quadrature.hpp
